<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="3dp" >

        <TextView
            android:id="@+id/textView_alarm_start"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/title_alarm_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
         />

	    <Button
	        android:id="@+id/button_Alarm_Start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:gravity="center"
	        android:layout_weight="50"
	        android:textStyle="bold"
	        android:text="@string/title_clock"
	        android:background="@drawable/bluecom_button_normal"
	    />

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="3dp" >

        <TextView
            android:id="@+id/textView_alarm_stop"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/title_alarm_stop"
            android:textAppearance="?android:attr/textAppearanceMedium"
			/>

	    <Button android:id="@+id/button_Alarm_Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="50"
            android:gravity="center"
            android:textStyle="bold"
	        android:text="@string/title_clock"
	        android:background="@drawable/bluecom_button_normal"
	    />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="3dp" >

        <TextView
            android:id="@+id/textView_active_time"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:gravity="left"
            android:text="@string/title_alarm_out"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />

        <ToggleButton
            android:id="@+id/toggle_Time_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/bluecom_toggle"
            android:gravity="center"
            android:hint="@string/title_space"
            android:textStyle="bold" />

    </LinearLayout>

    <Button android:id="@+id/button_Time_Set"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_time_set"
        android:textStyle="bold"
        android:background="@drawable/bluecom_button_normal"
    />

</LinearLayout>
</ScrollView>